crates/macro/tests/negative/artifacts/artifacts_unvailable_after_drop.stderr
error: proc macro panicked
  --> tests/negative/artifacts/artifacts_unvailable_after_drop.rs:20:5
   |
20 | /     graph! {
21 | |         InvalidGraph {
22 | |             GetNumber() -> (&number) >>
23 | |             PipeNumber(*number) >>
...  |
26 | |     }
   | |_____^
   |
   = help: message: missing borrowed artifact `number` for node call
